Update index.html - Test

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
   </label>
   <button id="update-btn" type="button">Update suitability index
     <div id="info-icon">i</div>
-    <div id="info-text">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
+    <div id="info-text">The suitability index is a result of the MCA in which various weightings can be applied.</div>
   </button>
   <button id="reset-btn" type="button">Reset</button>
   <label id="transparency-label" for="transparency-slider">Raster transparency:
