--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
 <div class="legend" id="legend">
   <div id="legend-info-toggle" title="The suitability index is the result of the factors where different weightings can be applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
-  <div id="legend-toggle" title="Toggle legend">−</div>
+  <div id="legend-toggle" title="Toggle legend"></div>
   <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legend</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
