--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width" />
 
   <!-- Title and favicon -->
-  <title>Dashboard Location-finder (demo: gym)</title>
+  <title>Dashboard Location-finder (demo: fitnesscenter)</title>
   <link rel="icon" href="data/1-aafea2ea.ico" type="image/ico" />
 
   <!-- Leaflet and Drawing Tools -->
@@ -324,46 +324,46 @@
 
 <div id="header-container">
   <img id="logo" src="data/NewLogo21.png" alt="Logo" />
-  <div id="page-title">Dashboard Location-finder (demo: gym)</div>
+  <div id="page-title">Dashboard Location-finder (demo: fitnesscenter)</div>
 </div>
 
 <div class="control-box" id="control-box">
-  <h2 class="control-box-title">Weighting factors (MCA)</h2>
-  <label for="weight-fitness">Proximity gym(s):
+  <h2 class="control-box-title">Wegingsfactoren Multicriteria Analyse (MCA)</h2>
+  <label for="weight-fitness">Nabijheid fitnesscentra:
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
     <span id="percent-fitness">30%</span>
   </label>
-  <label for="weight-ov">Public transport:
+  <label for="weight-ov">OV bereikbaarheid:
     <input type="range" min="0" max="1" step="0.01" id="weight-ov" value="0.20" />
     <span id="percent-ov">20%</span>
   </label>
-  <label for="weight-pop">Population density:
+  <label for="weight-pop">Bevolkingsdichtheid:
     <input type="range" min="0" max="1" step="0.01" id="weight-pop" value="0.50" />
     <span id="percent-pop">50%</span>
   </label>
   <button id="update-btn" type="button">Update suitability index
     <div id="info-icon">i</div>
-    <div id="info-text">The suitability index is a result of the MCA in which various weightings can be applied.</div>
+    <div id="info-text">De suitability index is het resultaat van de MCA waarbij verschillende wegingen kunnen worden toegepast.</div>
   </button>
   <button id="reset-btn" type="button">Reset</button>
-  <label id="transparency-label" for="transparency-slider">Raster transparency:
+  <label id="transparency-label" for="transparency-slider">Raster transparantie:
     <input type="range" min="0" max="1" step="0.01" id="transparency-slider" value="0.5" />
     <span id="percent-transparency">50%</span>
   </label>
   <button id="export-csv-btn" type="button">Export CSV</button>
   <button id="export-json-btn" type="button">Export JSON</button>
   <div id="selection-summary"></div>
-  <button id="close-menu-btn" type="button">Toggle menu</button>
+  <button id="close-menu-btn" type="button">Minimaliseer menu</button>
 </div>
 
-<button id="toggle-menu-btn">Open Location Finder menu</button>
+<button id="toggle-menu-btn">Open locatievinder menu</button>
 
 <div id="map"></div>
 
 <div class="legend" id="legend">
-  <div id="legend-info-toggle" title="The suitability index is the result of the factors where different weightings can be applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
-  <div id="legend-toggle" title="Toggle legend"></div>
-  <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legend</div>
+  <div id="legend-info-toggle" title="De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt">ℹ️</div>
+  <div id="legend-toggle" title="Minimaliseer legenda">−</div>
+  <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
   </div>
@@ -381,7 +381,7 @@
     <span class="legend-label-right">10</span>
   </div>
   <div class="legend-info" id="legend-info" style="display: none;">
-    The suitability index is the result of the factors where different weightings can be applied. 0 = not suitable | 10 = highly suitable
+    De suitability index is het resultaat van de factoren waarbij verschillende wegingen kunnen worden toegepast. 0 = niet geschikt | 10 = uiterst geschikt
   </div>
 </div>
 
@@ -390,7 +390,7 @@
 <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 <script>
   // Change URL bar title (if user navigates directly via url)
-  document.title = "Dashboard Location Finder (demo: fitnesscenter)";
+  document.title = "Dashboard Location-finder (demo: fitnesscenter)";
 
   // Info icon logic
   const infoIcon = document.getElementById('info-icon');
@@ -478,7 +478,7 @@
   });
 
   const overlays = {
-    "Satellite": satelliteLayer
+    "Satelliet": satelliteLayer
   };
 
   L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
@@ -671,7 +671,7 @@
       }).addTo(map);
     })
     .catch(error => {
-      console.error("Error loading municipal map:", error);
+      console.error("Fout bij het laden van gemeentekaart:", error);
     });
 
   const drawnItems = new L.FeatureGroup().addTo(map);
@@ -781,9 +781,9 @@
     if(count > 0){
       controlBox.classList.add('show-stats');
       document.getElementById('selection-summary').innerHTML =
-        Total selected cells: ${count}<br>
-        Total area: ${areaKm2.toFixed(1)} km²<br>
-        Average MCA score: ${meanScore.toFixed(2)}`;
+        `Aantal geselecteerde cellen: ${count}<br>
+        Totale oppervlakte: ${areaKm2.toFixed(1)} km²<br>
+        Gemiddelde MCA_score: ${meanScore.toFixed(2)}`;
     } else {
       clearSelectionAndStats();
     }
