Update index.html - typo update

--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     if(count > 0){
       controlBox.classList.add('show-stats');
       document.getElementById('selection-summary').innerHTML =
-        Total selected cells: ${count}<br>
+        `Total selected cells: ${count}<br>
         Total area: ${areaKm2.toFixed(1)} km²<br>
         Average MCA score: ${meanScore.toFixed(2)}`;
     } else {
