--- a/index.html
+++ b/index.html
@@ -333,6 +333,13 @@
     <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
     <span id="percent-fitness">30%</span>
   </label>
+  <div id="layer-controls">
+  <label>
+    <input type="checkbox" id="toggle-gyms">
+    Show gym locations
+  </label>
+</div>
+  
   <label for="weight-ov">Proximity to public transport:
     <input type="range" min="0" max="1" step="0.01" id="weight-ov" value="0.20" />
     <span id="percent-ov">20%</span>
@@ -363,7 +370,7 @@
 <div class="legend" id="legend">
   <div id="legend-info-toggle" title="The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
   <div id="legend-toggle" title="Toggle legend">−</div>
-  <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legenda</div>
+  <div class="legend-title" style="font-size: 14px; text-align: center; margin-bottom: 5px;">Legend</div>
   <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span class="legend-title">Suitability index</span>
   </div>
@@ -478,7 +485,7 @@
   });
 
   const overlays = {
-    "Satelliet": satelliteLayer
+    "Satellite": satelliteLayer
   };
 
   L.control.layers(null, overlays, { position: 'topright' }).addTo(map);
@@ -637,6 +644,37 @@
       this.title = 'Show full legend';
     }
   });
+  
+let gymLayer;
+
+fetch('data/fitness_030.json')  // or './fitness_030.json' depending on folder structure
+  .then(response => response.json())
+  .then(data => {
+    gymLayer = L.geoJSON(data, {
+      pointToLayer: (feature, latlng) => {
+        return L.circleMarker(latlng, {
+          radius: 6,
+          fillColor: '#ff5722',
+          color: '#fff',
+          weight: 1,
+          opacity: 1,
+          fillOpacity: 0.8
+        });
+      },
+      onEachFeature: (feature, layer) => {
+        const name = feature.properties.name || "Gym";
+        layer.bindPopup(`<strong>${name}</strong>`);
+      }
+    });
+  });
+
+document.getElementById('toggle-gyms').addEventListener('change', function () {
+  if (this.checked) {
+    if (gymLayer) gymLayer.addTo(map);
+  } else {
+    if (map.hasLayer(gymLayer)) map.removeLayer(gymLayer);
+  }
+});
 
   fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
     .then(response => response.json())
