Update index.html - clickable buslayer 2

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@ fetch('data/fitness_030.json')  // or './fitness_030.json' depending on folder s
 fetch('busstops_030.json')  // 
   .then(response => response.json())
   .then(data => {
-    gymLayer = L.geoJSON(data, {
+    busLayer = L.geoJSON(data, {
       pointToLayer: (feature, latlng) => {
         return L.circleMarker(latlng, {
           radius: 2,
