--- a/index.html
+++ b/index.html
@@ -385,14 +385,9 @@
   <span id="percent-fitness">30%</span>
 </div>  
   
-  <label for="weight-ov">Proximity to public transport:
-    <input type="range" min="0" max="1" step="0.01" id="weight-ov" value="0.20" />
-    <span id="percent-ov">20%</span>
-  </label>
-
 <div class="control-row">
   <input type="checkbox" id="toggle-bus" class="layer-toggle" title="Show bus locations" />
-  <label for="weight-ov">Proximity to gym(s):</label>
+  <label for="weight-ov">Proximity to public transport:</label>
   <input type="range" min="0" max="1" step="0.01" id="weight-ov" value="0.30" />
   <span id="percent-ov">30%</span>
 </div>  
@@ -412,8 +407,9 @@
     <span id="percent-transparency">50%</span>
   </label>
   
-<label>
-  <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer">
+ <label>
+  <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer" checked />
+  Gemeente Utrecht
 </label>
   
   <button id="export-csv-btn" type="button">Export CSV</button>
