--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
   <h2 class="control-box-title">Weighting factors (MCA)</h2>
 
 <div class="control-row">
-  <input type="checkbox" id="toggle-gyms" class="layer-toggle" title="Show gym locations" />
+  <input type="checkbox" id="toggle-gym" class="layer-toggle" title="Show gym locations" />
   <label for="weight-fitness">Proximity to gym(s):</label>
   <input type="range" min="0" max="1" step="0.01" id="weight-fitness" value="0.30" />
   <span id="percent-fitness">30%</span>
