Update index.html - change control box again

--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
   align-items: center;
   gap: 8px;
 }
+    .inline-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.inline-checkbox input[type="checkbox"] {
+  margin: 0;
+}
 .layer-toggle {
   position: relative;
   cursor: pointer;
@@ -407,10 +419,13 @@
     <span id="percent-transparency">50%</span>
   </label>
   
- <label>
-  <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer" checked />
-  Gemeente Utrecht
-</label>
+<div class="control-row">
+  <label class="inline-checkbox">
+    <input type="checkbox" id="toggle-grid" class="layer-toggle" title="Show grid layer" checked />
+    Gemeente Utrecht
+  </label>
+</div>
+
   
   <button id="export-csv-btn" type="button">Export CSV</button>
   <button id="export-json-btn" type="button">Export JSON</button>
@@ -706,19 +721,20 @@
 let gymLayer;
 let busLayer;
   
-fetch('data/fitness_030.json')  // or './fitness_030.json' depending on folder structure
+  const gymIcon = L.icon({
+  iconUrl: 'https://geosenso92.github.io/fitness-locator-map/data/gymsymbol.png',
+  iconSize: [24, 24],       // Adjust size based on your PNG
+  iconAnchor: [16, 32],     // Bottom center of icon
+  popupAnchor: [0, -32]     // Position of popup relative to icon
+});
+
+// Load and render gym layer with custom icon
+fetch('data/fitness_030.json')
   .then(response => response.json())
   .then(data => {
     gymLayer = L.geoJSON(data, {
       pointToLayer: (feature, latlng) => {
-        return L.circleMarker(latlng, {
-          radius: 6,
-          fillColor: '#ff5722',
-          color: '#fff',
-          weight: 1,
-          opacity: 1,
-          fillOpacity: 0.5
-        });
+        return L.marker(latlng, { icon: gymIcon });
       },
       onEachFeature: (feature, layer) => {
         const name = feature.properties.name || "Gym";
