Update index.html - Statistics shown again

--- a/index.html
+++ b/index.html
@@ -448,6 +448,9 @@
     Gemeente Utrecht
   </label>
 </div>
+  
+<div id="selection-summary"></div>
+  
 <div id="export-dropdown" class="export-dropdown">
   <button id="export-btn">Export</button>
   <div id="export-options" class="export-options hidden">
